Bug 87210 - Exporting to xlsx crashes
Summary: Exporting to xlsx crashes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4.0.0.beta1
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.5.0 target:4.4.0.0.beta3
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-10 21:17 UTC by Kohei Yoshida
Modified: 2015-03-31 11:04 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kohei Yoshida 2014-12-10 21:17:32 UTC
Opening a certain large xlsx document and re-saving it as xlsx crashes due to excessive memory allocation.  Unfortunately the document in question is confidential and I cannot attach it here.
Comment 1 Kohei Yoshida 2014-12-10 21:17:55 UTC
confirming.
Comment 2 Commit Notification 2014-12-15 20:14:42 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3fcd2ccb443653740d114b3e4dc371c6b0b6525b

fdo#87210: Re-enable parallel deflate, which was not the root cause.

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2014-12-15 20:20:26 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cc52524e5b556ae694800df758e5e6917f1ace6c&h=libreoffice-4-4

fdo#87210: Re-enable parallel deflate, which was not the root cause.

It will be available in 4.4.0.0.beta3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Matthew Francis 2015-03-31 11:04:32 UTC
I assume this was fixed by the patch that has landed in 4.4 and 4.5 master.
(If not, feel free to reopen)

-> RESOLVED FIXED