fdo#87210: Re-enable parallel deflate, which was not the root cause.

With f92183833fa569006602ac7e93c906d2094e0d4d, export no longer crashes,
and there is no reason to leave this piece disabled any more.  Let's
re-enable this.

Change-Id: Ibeca8869f152cbcd80f1dcb55f8199110125741d
(cherry picked from commit 3fcd2ccb443653740d114b3e4dc371c6b0b6525b)